# ollie-rl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  pyproject.toml
.agents/skills/dev/: SKILL.md
.agents/skills/dev/references/: data-model.md  malformed-samples.md  sync-rl.md  tinker-trainer.md
.agents/skills/dev/references/draft/: malformed-samples.md  tinker-cookbook-track.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml
deploy/: docker-compose.yaml
docs/: api-design-iterate-job-queue.md  api-design-iterate.md  data-model.md  refactor-internal-iterate.md
examples/code-contests/: README.md  prepare_data.py  run_training.py
examples/code-contests/tasks/: .gitignore
examples/code-contests/trials/: .gitignore
examples/weather-agent/: README.md  opencode.json  opencode.jsonc  run_training.py
examples/weather-agent/.opencode/tools/: get_weather.ts
examples/weather-agent/data/: cities.json
src/gemini_msrl/: __init__.py  client.py  test_client.py  test_types.py  types.py
src/ollie_rl/: __init__.py  background.py  test_app.py  types.py
src/ollie_rl/cookbook/: __init__.py  base.py  gemini_msrl.py  recipes.py  test_gemini_msrl.py  tinker_rl.py  types.py
src/ollie_rl/db/: __init__.py  connection.py  models.py  types.py
src/ollie_rl/db/migrations/: env.py
src/ollie_rl/db/migrations/versions/: 20260702_1821_6bfd897f8703_initial_schema.py  20260702_2030_4cf645b150dc_add_hot_path_composite_indexes_to_runs.py  20260703_1424_4a89b289ddc9_add_duration_ms_to_record_sample_.py  20260703_2158_baf4d96e9d36_add_in_flight_chat_completion_table_to_.py  20260705_1543_c995075b7dc6_add_policy_generation_to_in_flight_.py  20260706_1104_ecae048edc2f_add_index_to_finish_reason.py  20260708_1051_821cc4f5d981_add_checkpoint.py  20260708_1321_abb57b16bc98_add_unique_constraint_on_tuner_id_x_.py
src/ollie_rl/server/: app.py  chat_storage.py  completion_storage.py  redis_client.py  streaming.py  test_app.py  test_chat_storage.py  test_completion_storage.py  test_streaming.py  test_tuner_storage.py  tuner_storage.py  webui.py
src/ollie_rl/service/: __init__.py  dispense.py  test_dispense.py  test_tuner_service.py  tuner_service.py
src/ollie_rl/service/tuner/: __init__.py  base.py  completion_helpers.py  constants.py  dispense.py  dispensing.py  errors.py  lifecycle.py  locks.py  quarantine.py  queries.py  run_helpers.py  sampling.py  service.py  state_store.py  test_dispense.py  test_dispensing.py  test_tuner_service.py  training.py  types.py
src/ollie_rl/trainer/: __init__.py  factory.py  fake.py  gemini_msrl.py  test_gemini_msrl.py  test_tinker.py  tinker.py  types.py
src/ollie_rl/trainer/gemini_msrl/: __init__.py  conversion.py  factory.py  ops.py  sampler.py  state.py  trainer.py
src/ollie_rl/trainer/tinker/: __init__.py  accumulator.py  test_accumulator.py  test_trainer.py  trainer.py
web/: README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/src/: main.tsx  router.tsx  styles.css
web/src/api/: client.ts  queries.ts  schema.d.ts  types.ts
web/src/components/: ChatTranscript.tsx  DatumTable.tsx  PrettyJson.tsx  RewardCurveChart.tsx  RewardDistribution.tsx  RootLayout.tsx  RunStatusBadge.tsx  SearchableSelect.tsx  ui.tsx
web/src/pages/: CompletionDetailPage.tsx  DataPage.tsx  DatumsPage.tsx  EvalPage.tsx  RunDetailPage.tsx  RunListPage.tsx  TunerDetailPage.tsx  TunerListPage.tsx
