[project]
name = "ollie-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "google-genai>=2.10.0",
    "greenlet>=3.5.2",
    "httpx>=0.28.1",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.51",
    "tinker>=0.22.3",
    "tinker-cookbook>=0.1.0",
    "torchvision>=0.27.1",
    "transformers>=5.12.1",
]

[dependency-groups]
dev = [
    "poethepoet>=0.46.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ty>=0.0.52",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[tool.poe.tasks.dev]
script = "ollie_rl:dev"

[tool.poe.tasks.format]
shell = "uvx ruff check . --select F401 --output-format concise --fix && uv format"
