[project]
name = "ollie-rl"
version = "0.1.0"
description = "An OpenAI-compatible chat-completions server with a built-in online GRPO training loop."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Meng Zhang", email = "meng@tabbyml.com" },
]
keywords = [
    "reinforcement-learning",
    "grpo",
    "rlhf",
    "llm",
    "fastapi",
    "openai-api",
    "gemini",
    "tinker",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "google-genai>=2.10.0",
    "greenlet>=3.5.2",
    "harbor[daytona]>=0.16.1",
    "httpx>=0.28.1",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.51",
    "tinker>=0.22.3",
    "tinker-cookbook>=0.1.0",
    "torchvision>=0.27.1",
    "transformers>=5.12.1",
]

[project.urls]
Homepage = "https://github.com/wsxiaoys/ollie-rl"
Repository = "https://github.com/wsxiaoys/ollie-rl"
Issues = "https://github.com/wsxiaoys/ollie-rl/issues"
Changelog = "https://github.com/wsxiaoys/ollie-rl/releases"

[dependency-groups]
dev = [
    "poethepoet>=0.46.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-env>=1.6.0",
    "ty>=0.0.52",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

# ---- Developer task runner (`uv run poe <task>`) ----------------------------

[tool.poe.tasks.dev]
help = "Run the FastAPI backend (auto-reload) and the Vite frontend (HMR) together."
deps = ["gen-web-types"]
shell = """
trap 'kill 0' EXIT
OLLIE_WEB_DEV_SERVER=http://localhost:5173 \
  uv run uvicorn ollie_rl.server.app:app --host 127.0.0.1 --port 8000 --reload &
cd web && bun run dev
"""

[tool.poe.tasks.gen-web-types]
help = "Regenerate web/src/api/schema.d.ts from the FastAPI OpenAPI schema."
shell = """
uv run python -c "import json; from ollie_rl.server.app import app; print(json.dumps(app.openapi(), indent=2))" > web/openapi.json
cd web && bun install && bun run gen:types
"""

[tool.poe.tasks.test]
help = "Run the pytest suite."
cmd = "uv run pytest"

[tool.poe.tasks.check]
help = "Run the ty type checker."
cmd = "uv run ty check"

[tool.poe.tasks.lint]
help = "Lint with ruff (no autofix)."
cmd = "uvx ruff check ."

[tool.poe.tasks.format]
help = "Autofix lint + format the codebase."
shell = "uvx ruff check . --select F401 --output-format concise --fix && uv format"

[tool.poe.tasks.docker-build]
help = "Build the Docker image locally."
cmd = "docker build -t ollie-rl:dev ."

[tool.poe.tasks.docker-up]
help = "Run the Docker compose stack (production-style)."
cmd = "docker compose -f deploy/docker-compose.yaml up -d"

[tool.poe.tasks.docker-down]
help = "Stop the Docker compose stack."
cmd = "docker compose -f deploy/docker-compose.yaml down"

[tool.pytest.ini_options]
# Only collect the real test suite under src/. The Harbor task fixtures in
# examples/code-contests/tasks/*/tests/ reuse the same basename (test_state.py)
# without package markers, which otherwise trips pytest's import-mode collision
# check ("import file mismatch").
testpaths = ["src"]

[tool.pytest_env]
DATABASE_URL = "sqlite+aiosqlite:///:memory:"
